sort overflow issue, sizing

--- a/src/styles/typography.styl
+++ b/src/styles/typography.styl
@@ -2,7 +2,7 @@ html, body
     width: 100%
     height: 100%
     position: relative
-    overflow: hidden
+    overflow-x: hidden
 
 html
     font-size: 16px
@@ -34,7 +34,7 @@ h3
     font-size: 1.44rem
 
 h4
-    font-size: 1.2rem
+    font-size: 1.1rem
 
 small, .font_small
     font-size: 0.833rem
